--- a/VLC_Form/VLC_Form.csproj
+++ b/VLC_Form/VLC_Form.csproj
@@ -84,6 +84,10 @@
       <Project>{d62bf4fc-4066-4e8d-91ea-fb3028e3d1ef}</Project>
       <Name>Control VLC</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TCP\TCP.csproj">
+      <Project>{6D3FDB22-6F43-46CB-BC8C-5B55B66A6512}</Project>
+      <Name>TCP</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
