--- a/VLC_Form/VLC_Form.csproj
+++ b/VLC_Form/VLC_Form.csproj
@@ -84,6 +84,10 @@
       <Project>{d62bf4fc-4066-4e8d-91ea-fb3028e3d1ef}</Project>
       <Name>Control VLC</Name>
     </ProjectReference>
+    <ProjectReference Include="..\PESocket\PESocket\PESocket.csproj">
+      <Project>{b4239e0b-82f4-4f9a-a330-0afd46e88d02}</Project>
+      <Name>PESocket</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
