--- a/VLC Controller Lib/VLC Controller Lib.csproj
+++ b/VLC Controller Lib/VLC Controller Lib.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Control_VLC</RootNamespace>
-    <AssemblyName>Control VLC</AssemblyName>
+    <AssemblyName>VLC Controller Lib</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
