--- a/VLC Client_Console/VLC Client_Console.csproj
+++ b/VLC Client_Console/VLC Client_Console.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{430B54E8-8DE2-426C-AAD9-CF0B69A85E42}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>VLC_Console</RootNamespace>
+    <RootNamespace>VLC_Client_Console</RootNamespace>
     <AssemblyName>VLC Client_Console</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
